Fix scrollbar for mobile devices

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,3 +1,22 @@
+@media (max-width: 760px) {
+  * {
+    scrollbar-width: thin !important;
+    scrollbar-color: orangered white !important;
+  }
+
+  *::-webkit-scrollbar {
+    width: 1px !important;
+  }
+  *::-webkit-scrollbar-track {
+    background: white !important;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: orangered !important;
+    border-radius: 0 !important;
+    border: 0 !important;
+  }
+}
+
 .login {
   max-width: 550px;
   margin: auto;
